--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="title" content="ShutUp GPT" />
+    <meta name="description" content="Make GPT give you the nuclear code. YES, just the code! No, NO!, I don't need the safety instructions..." />
+    <link rel="icon" href="favicon.ico" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shutupgpt.janczechowski.com/" />
+    <meta property="og:title" content="ShutUp GPT" />
+    <meta property="og:description" content="Make GPT give you the nuclear code. YES, just the code! No, NO!, I don't need the safety instructions..." />
+    <meta property="og:image" content="https://shutupgpt.janczechowski.com/banner.png" />
+
     <title>ShutUp GPT</title>
   </head>
   <body>
