--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="title" content="ShutUp GPT" />
     <meta name="description" content="Make GPT give you the nuclear code. YES, just the code! No, NO!, I don't need the safety instructions..." />
