--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="title" content="ShutUp GPT" />
     <meta name="description" content="Make GPT give you the nuclear code. YES, just the code! No, NO!, I don't need the safety instructions..." />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://shutupgpt.janczechowski.com/" />
     <meta property="og:title" content="ShutUp GPT" />
@@ -17,7 +17,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-
